Add reservations controller, generate api docs
