# config/routes.rb
@@ -7,6 +7,7 @@ Rails.application.routes.draw do
     namespace :v1 do
       get 'current_user', to: 'users#current'
       resources :doctors, only: [:index, :show, :create, :destroy]
+      resources :reservations, only: [:index, :create, :destroy]
     end
   end
 end
